--- a/src/App.scss
+++ b/src/App.scss
@@ -33,14 +33,30 @@ h6 {
     font-size  : inherit;
 }
 
+._icon-fb:before {
+    content: "\e900";
+}
+
+._icon-group:before {
+    content: "\e901";
+}
+
+._icon-insta:before {
+    content: "\e902";
+}
+
+._icon-lk:before {
+    content: "\e903";
+}
+
 $fontSize         :16px;
-$maxWidthContainer:1270;
+$maxWidthContainer:855;
 $mainColor        :#3A3A3A;
 $orangeColor      :#E89F71;
 $greyColor        :#898989;
 $darkGreyColor    :#616161;
 
-@mixin get-adaptive-style($style, $value, $mobValue) {
+@mixin adaptive-style($style, $value, $mobValue) {
 
     @media (min-width:$maxWidthContainer+px) {
         #{$style}: $value+px;
@@ -65,4 +81,11 @@ body {
     color      : $mainColor;
     font-family: 'Heebo', sans-serif;
 
+}
+
+.text {
+    font-weight: 400;
+    @include adaptive-style("font-size", 16, 13);
+    line-height: 24/16*100%;
+    color      : #21243D;
 }
