--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -4,23 +4,19 @@
 }
 
 
-$fontSize:16px;
 
 $minWidth         :320px;
 $maxWidth         :1440;
-$maxWidthContainer:1270;
+$maxWidthContainer:855;
 
 $md1:$maxWidthContainer+12;
 $md2:991.98;
 $md3:767.98;
 $md4:478.98;
 
-$mainColor    :#3A3A3A;
-$orangeColor  :#E89F71;
-$greyColor    :#898989;
-$darkGreyColor:#616161;
 
-@mixin get-adaptive-style($style, $value, $mobValue) {
+
+@mixin adaptive-style($style, $value, $mobValue) {
 
     @media (min-width:$maxWidthContainer+px) {
         #{$style}: $value+px;
@@ -32,248 +28,58 @@ $darkGreyColor:#616161;
 
 }
 
-._footer-title {
-    @include get-adaptive-style("font-size", 24, 20);
-    line-height: 29 /24*100%;
-    font-weight: 700;
-    color      : #000000;
-}
-
-.page {
 
 
-    &__main-slider {}
-}
+.main {
+    margin-top: 180px;
 
-.main-slider {
-    background: #FCF8F3;
-
-    &__container {
-        position: relative;
-
-        @media (min-width:$md2+px) {
-            &::before {
-                content   : "";
-                background: #F9F1E7;
-                width     : 100vw;
-                position  : absolute;
-                top       : 0;
-                right     : 375px;
-                height    : 100%;
-            }
-        }
-    }
+    &__container {}
 
     &__body {
-        position: relative;
-        z-index : 2;
-        padding : 140px 0 0 0;
-
-        @media (min-width:$md2+px) {
-            display: flex;
-            padding: 80px 0 0 0;
-        }
+        flex: 0 0 494/855*100%;
     }
 
-    &__content {
-        flex: 0 0 495/1240*100%;
-
-    }
-
-    &__slider {
-        flex: 1 1 auto;
-    }
-}
-
-
-.content-main {
-    background   : rgba(255, 255, 255, 0.72);
-    position     : relative;
-    z-index      : 5;
-    padding-left : 15px;
-    padding-right: 15px;
-
-    @media (min-width:$md2+px) {
-        @include get-adaptive-style("padding", 60, 30);
-    }
-
-
-    &__title {
-        @include get-adaptive-style("font-size", 56, 24);
-        font-weight: 700;
-        line-height: 120%;
-        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-
-        &:not(:last-child) {
-            margin: 0 0 16px/56px*1em 0;
-        }
-    }
-
-    &__text {
-        @include get-adaptive-style("font-size", 20, 16);
-        font-weight: 500;
-        line-height: 150%;
-        color      : $greyColor;
-
-        &:not(:last-child) {
-            margin: 0 0 48px/20px*1em 0;
-        }
-    }
-
-    &__button {
-        @include get-adaptive-style("min-height", 78, 50);
-        @include get-adaptive-style("font-size", 20, 15);
-
-        background: $orangeColor;
-        color     : #fff;
-        width     : 100%;
-
-        @media (any-hover:hover) {
-            &:hover {
-                background: #e58f59;
-            }
-        }
-    }
-}
-
-
-.slider-main {
-
-    &__controls {
-        margin: 20px 0 20px 30px;
-    }
-
-    &__content {
-        min-width : 295px;
-        max-height: 300px;
-        min-height: 148px;
-        overflow  : auto;
-        position  : relative;
-
-        background    : rgba(255, 255, 255, 0.72);
-        display       : flex;
-        flex-direction: column;
-        @include get-adaptive-style("padding", 24, 15);
-
-        @media (min-width:$md3+px) {
-            position: absolute;
-            @include get-adaptive-style("right", 40, 15);
-            @include get-adaptive-style("bottom", 40, 15);
-
-        }
-
-
-    }
-
-
-    &__title {
-        color      : inherit;
-        font-weight: 600;
-        @include get-adaptive-style("font-size", 28, 22);
-        line-height: 120%;
-        color      : #3A3A3A;
-        margin     : 0 0 4px/28px *1em 0px;
-    }
-
-    &__text {
-        font-weight: 500;
-        @include get-adaptive-style("font-size", 16, 14);
-
-        line-height: 150%;
-
-        &:not(:last-child) {
-            margin: 0 0 8px/16px *1em 0px;
-        }
-
-        color: #616161;
-    }
-
-    &__price {
-        font-weight: 600;
-
-        &:not(:last-child) {
-            @include get-adaptive-style("font-size", 20, 16);
-        }
-
-        line-height: 150%;
-
-        color: #3A3A3A;
-    }
-
-    &__prices {
-        display        : flex;
-        justify-content: space-between;
-        align-items    : center;
-    }
-
-    &__price-arrow {}
-}
-
-
-._ibg {
-    background-image   : url("../../assets/img/img1.jpg");
-    padding            : 0 0 58% 0;
-    background-position: center;
-}
-
-
-
-
-
-.slider-arrows {
-    display              : grid;
-    grid-template-columns: repeat(2, 48px);
-    column-gap           : 8px;
-
-}
-
-
-
-.controls-slider-main {
-    display        : flex;
-    justify-content: space-between;
-    align-items    : center;
-}
-
-.control-slider-main {
-    position: relative;
-
-    &__dotts {
-        position: relative;
-        display : flex;
-
-
-    }
-
-    &__dott {
-        display      : block;
-        height       : 11px;
-        width        : 11px;
-        background   : #D8D8D8;
+    &__img {
+        background-image   : url("../../assets/user.jpg");
+        background-repeat  : no-repeat;
+        background-position: center;
+        @include adaptive-style("height", 243, 174);
+        @include adaptive-style("width", 243, 174);
         border-radius: 50%;
 
-        &:not(:last-child) {
-            margin: 0 20px 0 0;
+    }
+
+    &__content {
+        :not(:last-child) {
+            @include adaptive-style("margin-bottom", 40, 21);
+        }
+
+        display : flex;
+
+        justify-content: space-between;
+    }
+
+
+
+
+    .body-main {
+
+        &__title {
+            font-weight: 700;
+            @include adaptive-style("font-size", 44, 32);
+            @include adaptive-style("line-height", 60, 40);
+            color: #21243D;
         }
     }
 
-    &__dott-active {
-        background-color: $orangeColor;
-        position        : relative;
-
-        &::before {
-            content      : "";
-            position     : absolute;
-            top          : -4.4px;
-            left         : -3.8px;
-            height       : 20px;
-            width        : 20px;
-            border       : 1px solid $orangeColor;
-            border-radius: 50%;
-
-        }
-
+    .btn {
+        font-weight  : 500;
+        font-size    : 20px;
+        line-height  : 29/20*100%;
+        color        : #FFFFFF;
+        background   : #FF6464;
+        border-radius: 2px;
+        height       : 46px;
+        width        : 208px;
     }
-
-    &__arrows {}
 }
