add(post,work):initaial commit

--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -37,6 +37,7 @@ $md4:478.98;
 
     &__body {
         flex: 0 0 494/855*100%;
+
     }
 
     &__img {
@@ -47,6 +48,10 @@ $md4:478.98;
         @include adaptive-style("width", 243, 174);
         border-radius: 50%;
 
+        @media (max-width:$md3+px) {
+            margin-bottom: 40px;
+        }
+
     }
 
     &__content {
@@ -54,9 +59,14 @@ $md4:478.98;
             @include adaptive-style("margin-bottom", 40, 21);
         }
 
-        display : flex;
-
+        display        : flex;
         justify-content: space-between;
+
+        @media (max-width:$md3+px) {
+            flex-direction : column-reverse;
+            justify-content: center;
+            align-items    : center;
+        }
     }
 
 
