--- a/src/components/Works/Works.scss
+++ b/src/components/Works/Works.scss
@@ -46,27 +46,65 @@ $md4:478.98;
     &__item {}
 
     .item-work {
+        @media (min-width:$maxWidthContainer+px) {
+            display: flex;
+        }
+
+        padding      : 30px 0 30px 0;
+        border-bottom: 1px solid silver;
+        ;
 
         &__img {
             background-image : url("../../assets/2.png");
             background-repeat: no-repeat;
             min-width        : 246px;
             min-height       : 180px;
-        }
 
-        &__title {}
-
-        &__info {}
-
-        &__body {
             @media (min-width:$maxWidthContainer+px) {
-                display: flex;
+                margin-right: 30px;
             }
         }
 
-        &__info-year {}
+        &__title {
+            font-weight: 700;
+            @include adaptive-style("font-size", 30, 24);
+            @include adaptive-style("line-height", 44, 30);
+            color      : #21243D;
+            text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        }
 
-        &__info-type {}
+        &__info {
+            display: flex;
+
+            :not(:last-child) {
+                @include adaptive-style("margin-right", 28, 22);
+            }
+        }
+
+        &__body {
+            :not(:last-child) {
+                margin-bottom: 20px;
+            }
+        }
+
+        &__info-year {
+            font-weight  : 900;
+            font-size    : 18px;
+            text-align   : center;
+            color        : #FFFFFF;
+            background   : #142850;
+            border-radius: 16px;
+            width        : 62px;
+            height       : 25px;
+
+        }
+
+        &__info-type {
+            font-weight: 400;
+            font-size  : 20px;
+            line-height: 29px;
+            color      : #8695A4;
+        }
 
         &__text {}
     }
